Tests/a1/reject/20.ul
int main (int x) {
	3  3;
}